infra/k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lampungdev-pos
  labels:
    environment: production
    project: lampungdevtech-pos
